--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
         });
 
         const tradesListEl = document.getElementById("trades-list");
-        const ws = new WebSocket("https://52fa-45-8-19-52.ngrok-free.app/trade");
+        const ws = new WebSocket("https://a4c8-216-73-161-249.ngrok-free.app/trade");
 
         ws.onopen = function (event) {
             console.log("Connected to WebSocket");
