--- a/src/detail.html
+++ b/src/detail.html
@@ -148,7 +148,7 @@
         const tradesListEl = document.getElementById("trades-list");
         const EQBL = document.getElementById("EQ-BL");
 
-        const ws = new WebSocket("https://a4c8-216-73-161-249.ngrok-free.app/trade");
+        const ws = new WebSocket("https://4dcb-216-73-161-66.ngrok-free.app//trade");
 
         ws.onopen = function (event) {
             console.log("Connected to WebSocket");
